--- a/F-BJV24001115-synergy7-ind-binfood-ch4/src/main/resources/application.properties
+++ b/F-BJV24001115-synergy7-ind-binfood-ch4/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=F-BJV24001115-synergy7-ind-binfood-ch4
+spring.main.allow-circular-references=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/binarfud_nisak
 spring.datasource.username=postgres
@@ -6,3 +7,5 @@ spring.datasource.password=khrnnisak13
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8081
