--- a/F-BJV24001115-synergy7-ind-binfood-ch8/src/main/resources/application.properties
+++ b/F-BJV24001115-synergy7-ind-binfood-ch8/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.port=8081
 spring.jackson.property-naming-strategy: SNAKE_CASE
-app.firebase-configuration-file=binarfud-kh-firebase-adminsdk-jbnxx-3843627859.json
+app.firebase-configuration-file=${firebase-configuration-file}
