--- a/F-BJV24001115-synergy7-ind-binfood-ch8/src/main/resources/application.properties
+++ b/F-BJV24001115-synergy7-ind-binfood-ch8/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 server.port=8081
 spring.jackson.property-naming-strategy: SNAKE_CASE
 app.firebase-configuration-file=${firebase-configuration-file}
+
+security.jwt.expiration-time=60000
+security.jwt.secret-key=yourverysecuresecretkeythatisatleast32characterslong
