add postman dan db-dummy

--- a/F-BJV24001115-synergy7-ind-binfood-ch8/src/main/resources/application.properties
+++ b/F-BJV24001115-synergy7-ind-binfood-ch8/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=F-BJV24001115-synergy7-ind-binfood-ch8
 spring.main.allow-circular-references=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/tryyy
+spring.datasource.url=jdbc:postgresql://localhost:5432/binarfud_nisak
 spring.datasource.username=postgres
 spring.datasource.password=${db-password}
 
